Test: Contrast color Image resize

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -39,7 +39,7 @@ $container__technologies-desktop--projets--dark:  $light-color;
 $container__description-desktop--projets--dark:  $light-color;
 $container__sources-button-background-desktop--project--dark:  #388439; 
 $container__sources-button-border-desktop--project--dark: #388439;
-$container__sources-links-button-border-desktop--project--dark: $light-color;
+$container__sources-links-button-border-desktop--project--dark: white;
 // -- Component navBar
 $navBar__item-background-mobile--navbar--dark: $primary-color; 
 $navBar__item-border-mobile--navbar--dark: $dark-color; 
