--- a/src/pages/Projets/Projets.module.scss
+++ b/src/pages/Projets/Projets.module.scss
@@ -88,6 +88,10 @@
                     border-radius: variables.$radius--10;
                     padding: 5px;    
                 }
+
+                // & a{
+                //     font-weight: bold;
+                // }
             }   
         }
     }
