--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -115,8 +115,8 @@ $slider__chevron-icone-fontSize-mobile--slider: 20px;
 
 // -- Fonts -- //
 /***************/
-$text-font: 'Saira Semi Condensed';
-$container__title-fontFamily-desktop--projets: 'Kalam', cursive;
+$text-font: 'Saira Semi Condensed', sans-serif;
+$container__title-fontFamily-desktop--projets: 'Kalam', cursive, sans-serif;
 
 // -- Radius -- //
 /****************/
