--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -92,10 +92,10 @@
             @media screen and (max-width: variables.$breakpoint-mobile) {
                 position: absolute;
                 display: block;
-                top: 338px;
-                left: 77px;
+                top: 335.7px;
+                left: 75px;
                 z-index: 1;
-                font-size: 15px;
+                font-size: 22px;
             }
         }
     }
@@ -145,15 +145,17 @@
     }
 
     &--dark{
-        .slider__chevron{
-            & i{
-                color: variables.$slider__chevron-color-desktop--slider--dark;
-                border: 2px solid variables.$slider__chevron-border-desktop--slider--dark;
-                background-color: variables.$slider__chevron-background-desktop--slider--dark;
-                box-shadow: 0px 10px 10px inset variables.$slider__chevron-boxShadow-desktop--slider--dark;
+        .slider{
+            &__chevron{
+                & i{
+                    color: variables.$slider__chevron-color-desktop--slider--dark;
+                    border: 1px solid variables.$slider__chevron-border-desktop--slider--dark;
+                    background-color: variables.$slider__chevron-background-desktop--slider--dark;
+                    box-shadow: 0px 10px 10px inset variables.$slider__chevron-boxShadow-desktop--slider--dark;
 
-                &:active{
-                    color: black;
+                    &:active{
+                        color: black;
+                    }
                 }
             }
         }
@@ -163,7 +165,7 @@
         .slider__chevron{
             & i{
                 color: variables.$slider__chevron-color-desktop--slider--light;
-                border: 2px solid variables.$slider__chevron-border-desktop--slider--light;
+                border: 1px solid variables.$slider__chevron-border-desktop--slider--light;
                 background-color: variables.$slider__chevron-background-desktop--slider--light;
                 box-shadow: 0px 10px 10px inset variables.$slider__chevron-boxShadow-desktop--slider--light;
 
@@ -173,6 +175,7 @@
             }
         }
     }
+    
 }
 
 .overflow{
