--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -95,7 +95,7 @@
                 top: 335.7px;
                 left: 75px;
                 z-index: 1;
-                font-size: 22px;
+                // font-size: 22px;
             }
         }
     }
